Fix 413 Content Too Large response status code

--- a/src/app/pages/add-project/add-project.component.scss
+++ b/src/app/pages/add-project/add-project.component.scss
@@ -290,3 +290,10 @@ input[type=text] {
 .mat-form-field{
    display: block;
 }
+
+.error-message {
+   margin-top: 5px;
+   color: red;
+   font-size: 12px;
+   text-align: center;
+}
